--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,16 @@
 <nav class="navbar navbar-dark bg-inverse">
-  <%= link_to 'Clear', root_path, class: "navbar-brand" %>
+
   <ul class="nav navbar-nav">
 
-<!--
-<li class="nav-item active">
-      <a class="nav-link" href='#'>New Movie <span class="sr-only">(current)</span></a>
+    <li class="nav-item <%= 'active' if params[:controller] == 'requests' %>">
+      <%= link_to 'LOL API', root_path, class: "nav-link" %>
     </li>
+
+    <li class="nav-item <%= 'active' if params[:controller] == 'smite_requests' %>">
+      <%= link_to 'Smite API', smite_requests_path, class: "nav-link" %>
+    </li>
+
+    <!--
     <li class="nav-item">
       <a class="nav-link" href="#">About</a>
     </li>
